--- a/public/index.html
+++ b/public/index.html
@@ -12,20 +12,25 @@
 </head>
 
 <body>
+	<div id="roomMenu" class="rainbow">
+		<h2>Join een room</h2>
+		Room:
+		<input id="room" type="text">
+		<button onclick="joinRoom()">Join</button>
+		<ul id="rooms"></ul>
+		
+	</div>
 
-
-	<div class="container">
-		<!-- <div>
-			<h2>Join een room</h2>
-			Room:
-			<input type="text">
-		</div> -->
+	<div id="videoContainer" style="display: none;" class="rainbow">
+		<div id="roomJoinedDiv">
+			<p id="roomJoined">Join een room!</p>
+			<button>Leave</button>
+		</div>
 
 		<input id="url" type="text" placeholder="Youtube url" />
 		<button onclick="addSong()">Voeg toe</button>
 		<button onclick="nextSong()">Volgende</button>
-		<ul id="queue">
-		</ul>
+		<ul id="queue"></ul>
 		<h2 id="vidTitle"></h2>
 		<h2 id="vidAuthor"></h2>
 		<div id="player"></div>
@@ -33,13 +38,17 @@
 
 </body>
 
-
 <script src="//ajax.googleapis.com/ajax/libs/jquery/1.8.2/jquery.min.js"></script>
 <script src="./auth.js"></script>
 <!-- for the youtube player -->
 <script src="http://www.youtube.com/player_api"></script>
 
+<script>
+	var socket = io();	
+</script>
+
 <script src="./script.js"></script>
+<script src="./rooms.js"></script>
 
 <!-- youtube search -->
 <script src="./search.js"></script>
